# HoneyCommander

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
assets/: icon.icns
docs/: ASSET_MANAGER_IDEAS.md  ASSET_TOOLS_RESEARCH.md
scripts/: build_nuitka.py  build_pyinstaller.py
src/commander/: __init__.py  __main__.py
src/commander/core/: archive_handler.py  file_operations.py  image_loader.py  model3d_loader.py  tab_manager.py  thumbnail_provider.py  trash_handler.py  undo_manager.py
src/commander/core/asset_manager/: __init__.py  database.py  hasher.py  library.py  scanner.py  tag_system.py
src/commander/core/network/: __init__.py  base.py  connection_manager.py  credentials.py  sftp_handler.py  smb_handler.py
src/commander/locales/: en.json  es.json  ja.json  ko.json  zh_CN.json  zh_TW.json
src/commander/models/: __init__.py  asset_model.py  network_model.py  tag_model.py
src/commander/utils/: custom_commands.py  i18n.py  logger.py  settings.py  themes.py  update_checker.py
src/commander/views/: __init__.py  archive_browser.py  asset_browser.py  asset_thumbnail_delegate.py  file_list.py  folder_tree.py  fullscreen_viewer.py  main_window.py  main_window_file_ops.py  main_window_menu.py  main_window_tabs.py  network_panel.py  preview_panel.py
src/commander/views/file_list/: __init__.py  drop_views.py  file_list_context_menu.py  file_list_models.py  file_list_operations.py  file_list_search.py  file_list_view.py  thumbnail_delegate.py
src/commander/views/viewer/: __init__.py  animation_controller.py  fullscreen_viewer.py  grid_overlay.py  image_cache.py  viewer_file_ops.py  viewer_input_handler.py
src/commander/widgets/: __init__.py  address_bar.py  asset_properties.py  conflict_dialog.py  custom_commands_dialog.py  favorites_panel.py  info_dialog.py  library_dialog.py  library_panel.py  model3d_viewer.py  network_connect_dialog.py  progress_dialog.py  search_dialog.py  settings_dialog.py  shortcuts_dialog.py  tab_bar.py  tab_content.py  tag_filter.py  text_viewer.py
tests/: __init__.py  conftest.py  test_file_operations.py  test_undo_manager.py  test_update_checker.py
