[project]
name = "honey-commander"
version = "0.1.0"
description = "꿀 커맨더 - Cross-platform file explorer with 꿀뷰-style image viewer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=12.0.0",
    "psd-tools>=1.12.1",
    "pyside6>=6.10.1",
    "rarfile>=4.2",
    "send2trash>=1.8.3",
]

[project.scripts]
commander = "commander.__main__:main"

[project.gui-scripts]
commander-gui = "commander.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commander"]

[tool.ruff]
line-length = 100
target-version = "py311"
